Change Arrays.asList() to List.of() in DwdApiService